atualização com imagem e css

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
     <h1>Alura Midi</h1>
 
+    <img class="bateria" src="images/bateria.png">
+
     <section class="teclado">
         <button class="tecla tecla_pom">Pom</button>
         <button class="tecla tecla_clap">Clap</button>
