--- a/index.html
+++ b/index.html
@@ -1,52 +1,66 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Alura MIDI</title>
+  <title>Alura MIDI</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bayon&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
 
-    <link rel="icon" type="image/png" href="images/bateria.png">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/estilos.css">
+  <link rel="icon" type="image/png" href="../img/sound_img.png">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/estilos.css">
 
 </head>
+
 <body>
 
-    <h1>Alura Midi</h1>
+  <audio src="sounds/keyq.wav" id="som_tecla_pom"></audio>
+  <audio src="sounds/keyw.wav" id="som_tecla_clap"></audio>
+  <audio src="sounds/keye.wav" id="som_tecla_tim"></audio>
+  <audio src="sounds/keya.wav" id="som_tecla_puff"></audio>
+  <audio src="sounds/keys.wav" id="som_tecla_splash"></audio>
+  <audio src="sounds/keyd.wav" id="som_tecla_toim"></audio>
+  <audio src="sounds/keyz.wav" id="som_tecla_psh"></audio>
+  <audio src="sounds/keyx.wav" id="som_tecla_tic"></audio>
+  <audio src="sounds/keyc.wav" id="som_tecla_tom"></audio>
 
-    <img class="bateria" src="images/bateria.png">
+  <div class="content">
 
-    <section class="teclado">
-        <button class="tecla tecla_pom">Pom</button>
-        <button class="tecla tecla_clap">Clap</button>
-        <button class="tecla tecla_tim">Tim</button>
+    <div class="iphone">
+      <div class="screen"></div>
+      <div class="sound"><img src="img/sound_img.png" class="sound_icon" alt="ícone de som"></img></div>
+      <div class="keyboard_bg">
+      </div>
 
-        <button class="tecla tecla_puff">Puff</button>
-        <button class="tecla tecla_splash">Splash</button>
-        <button class="tecla tecla_toim">Toim</button>
+      <ul class="keyboard">
+        <li><button class="tecla tecla_pom">Pom</button></li>
+        <li><button class="tecla tecla_clap">Clap</button></li>
+        <li><button class="tecla tecla_tim">Tim</button></li>
+        <li><button class="tecla tecla_puff">Puff</button></li>
+        <li><button class="tecla tecla_splash">Splash</button></li>
+        <li><button class="tecla tecla_toim">Toim</button></li>
+        <li><button class="tecla tecla_psh">Psh</button></li>
+        <li><button class="tecla tecla_tic">Tic</button></li>
+        <li><button class="tecla tecla_tom">Tom</button></li>
+        <li><button class="tecla tecla_pom">Pom</button></li>
+        <li><button class="tecla tecla_clap">Clap</button></li>
+        <li><button class="tecla tecla_tim">Tim</button></li>
+      </ul>
 
-        <button class="tecla tecla_psh">Psh</button>
-        <button class="tecla tecla_tic">Tic</button>
-        <button class="tecla tecla_tom">Tom</button>
-    </section>
+      <div class="notch">
+        <div class="speaker"></div>
+      </div>
+    </div>
+  </div>
 
-    <audio src="sounds/keyq.wav" id="som_tecla_pom"></audio>
-    <audio src="sounds/keyw.wav" id="som_tecla_clap"></audio>
-    <audio src="sounds/keye.wav" id="som_tecla_tim"></audio>
-    <audio src="sounds/keya.wav" id="som_tecla_puff"></audio>
-    <audio src="sounds/keys.wav" id="som_tecla_splash"></audio>
-    <audio src="sounds/keyd.wav" id="som_tecla_toim"></audio>
-    <audio src="sounds/keyz.wav" id="som_tecla_psh"></audio>
-    <audio src="sounds/keyx.wav" id="som_tecla_tic"></audio>
-    <audio src="sounds/keyc.wav" id="som_tecla_tom"></audio>
-
-    <script src="main.js"></script>
+  <script src="main.js"></script>
 
 </body>
+
 </html>
