updating the screen vid

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <div class="iphone">
       <div class="screen"></div>
-      <div class="sound"><img src="img/sound_img.png" class="sound_icon" alt="ícone de som"></img></div>
+      <div class="sound"><img src="img/giphy.gif" class="sound_icon" alt="ícone de som"></img></div>
       <div class="keyboard_bg">
       </div>
 
